fix: Small changes in button class hover, first-section butotns size on mobile media, about-us description size and color on media 768

--- a/#src/scss/base/_buttons.scss
+++ b/#src/scss/base/_buttons.scss
@@ -12,7 +12,7 @@
 	transition: .2s all linear;
 
 	&:hover {
-		filter: drop-shadow(3px 3px 2px #0005);
+		box-shadow: 3px 3px 2px #0005;
 	}
 }
 
@@ -24,6 +24,11 @@
 	& .button__text {
 		border-bottom: .1rem solid $color-2;
 		padding-bottom: .2rem;
+	}
+
+	&:hover {
+		filter: drop-shadow(3px 3px 2px #0005);
+		box-shadow: none;
 	}
 
 }
