--- a/#src/scss/components/_media-queries.scss
+++ b/#src/scss/components/_media-queries.scss
@@ -137,6 +137,8 @@
 
 	.about-us__description {
 		width: 80%;
+		font-size: 2rem;
+		color: #727272;
 	}
 
 	.about-us__cards {
@@ -256,7 +258,7 @@
 	}
 
 	.first-section__button {
-		font-size: 	1rem;
+		font-size: 	2rem;
 	}
 
 	.about-us__description {
